yaml-examples/jackett/jackett-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jackett
  namespace: default
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett
        imagePullPolicy: Always
        ports:
          - containerPort: 9117
        volumeMounts:
          - mountPath: /config
            name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett
